--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <!-- Box 2 -->
             <div class="services-box" data-tilt data-tilt-max="30">
                 <i class="bi bi-lightning"></i>
-                <h3>Arduino<br>Project</h3>
+                <h3>Network<br>Instalation</h3>
                 <a href="#">Visit Project</a>
             </div>
             <!-- Box 3 -->
