--- a/index.html
+++ b/index.html
@@ -196,6 +196,14 @@
                             <p style="font-weight: bold; color:white; line-height: 24px;">2022</p>
                         </div>
                     </div>
+                    <div class="grid-items photoshop" data-tilt data-tilt-max="30">
+                        <img src="./img/ps.png" alt="Photoshop">
+                        <div class="grid-description">
+                            <p style="font-weight: bold;  color:#fc5c30; line-height: 24px;">Photoshop</p>
+                            <p style="font-weight: bold; color:white; line-height: 24px;">Beginner</p>
+                            <p style="font-weight: bold; color:white; line-height: 24px;">2022</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div> 
