--- a/index.html
+++ b/index.html
@@ -204,6 +204,30 @@
                             <p style="font-weight: bold; color:white; line-height: 24px;">2022</p>
                         </div>
                     </div>
+                    <div class="grid-items bash" data-tilt data-tilt-max="30">
+                        <img src="./img/bash.png" alt="Bash">
+                        <div class="grid-description">
+                            <p style="font-weight: bold;  color:#fc5c30; line-height: 24px;">Bash Linux</p>
+                            <p style="font-weight: bold; color:white; line-height: 24px;">Beginner</p>
+                            <p style="font-weight: bold; color:white; line-height: 24px;">2021</p>
+                        </div>
+                    </div>
+                    <div class="grid-items python" data-tilt data-tilt-max="30">
+                        <img src="./img/python.png" alt="Figma">
+                        <div class="grid-description">
+                            <p style="font-weight: bold;  color:#fc5c30; line-height: 24px;">Python</p>
+                            <p style="font-weight: bold; color:white; line-height: 24px;">Beginner</p>
+                            <p style="font-weight: bold; color:white; line-height: 24px;">2023</p>
+                        </div>
+                    </div>
+                    <div class="grid-items javascript" data-tilt data-tilt-max="30">
+                        <img src="./img/js.png" alt="Javascript">
+                        <div class="grid-description">
+                            <p style="font-weight: bold;  color:#fc5c30; line-height: 24px;">javascript</p>
+                            <p style="font-weight: bold; color:white; line-height: 24px;">Beginner</p>
+                            <p style="font-weight: bold; color:white; line-height: 24px;">2022</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div> 
